--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,12 @@
 {erl_opts, [
-    debug_info,
-    {parse_transform, lager_transform}
+    debug_info
 ]}.
 
 {deps, [
     sync,
     {ranch, "1.7.1"},
-    {lager, {git, "https://github.com/erlang-lager/lager", {branch, "master"}}}
+    {log4erl, {git, "https://github.com/ahmednawras/log4erl", {branch, "master"}}},
+    {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}}
 ]}.
 
 {shell, [
