--- a/config/sys.config
+++ b/config/sys.config
@@ -1,17 +1,21 @@
 [
     {sasl, [{sasl_error_logger, {file, "./log/sasl.log"}}]},
-    {lager, [
-        {log_root, "./log"},
-        {handlers, [
-            {lager_console_backend,
-                [{level, info}, {formatter, lager_default_formatter},
-                    {formatter_config, [date, "/", time, "[", severity, "][", module, ":", function, ":", line, "]", "|", message, "\n"]}]},
-            {lager_file_backend,
-                [{file, "error.log"}, {level, error}, {formatter, lager_default_formatter},
-                    {formatter_config, [date, "/", time, "[", module, ":", function, ":", line, "]", "|", message, "\n"]}]},
-            {lager_file_backend,
-                [{file, "console.log"}, {level, info}, {formatter, lager_default_formatter},
-                    {formatter_config, [date, "/", time, "[", module, ":", function, ":", line, "]", "|", message, "\n"]}]}
-        ]}
+    {mysql_poolboy, [
+        {sqlPool1, {
+            [
+                {name, {local, mysql}},
+                {worker_module, mysql},
+                {size, 10},
+                {max_overflow, 5}
+            ],
+            [
+                {host, "127.0.0.1"},
+                {port, 3306},
+                {user, "root"},
+                {password, "123456"},
+                {database, "test"}
+            ]
+        }}
     ]}
+
 ].
