--- a/rebar.config
+++ b/rebar.config
@@ -1,19 +1,37 @@
 {erl_opts, [
-    debug_info
+    debug_info,
+    {i, "./_build/default/plugins/gpb/include"}
 ]}.
 
 {deps, [
     sync,
     {ranch, "1.7.1"},
     {log4erl, {git, "https://github.com/ahmednawras/log4erl", {branch, "master"}}},
-    {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}}
+    {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}},
+    {'mysql-otp-poolboy', {git, "https://github.com/mysql-otp/mysql-otp-poolboy", {branch, "master"}}}
 ]}.
 
+{plugins, [
+    {rebar3_gpb_plugin, "2.12.0"}
+]}.
 {shell, [
     {config, "config/sys.config"},
     {apps, [test_server, sync]}
 ]}.
 
+{gpb_opts, [
+    {i, "proto"},
+    {module_name_suffix, "_pb"},
+    {o_erl, "src/proto"},
+    {o_hrl, "include"},
+    {strings_as_binaries, true},
+    type_specs]}.
+{provider_hooks,
+    [{pre, [
+        {compile, {protobuf, compile}},
+        {clean, {protobuf, clean}}
+    ]}
+    ]}.
 {dist_node, [
     {setcookie, 'abc'},
     {name, 'yhw@127.0.0.1'},
