--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 
 {deps, [
     sync,
+    jsx,
     {ranch, "1.7.1"},
     {log4erl, {git, "https://github.com/ahmednawras/log4erl", {branch, "master"}}},
     {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}},
