--- a/config/login.cfg
+++ b/config/login.cfg
@@ -1,1 +1,3 @@
-{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, session_log, []}, 15000}}.
+{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, 15000}}.
+{server_event, {{game, test_event}, {test, test_event, []}, 5000}}.
+{server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
