--- a/config/sys.config
+++ b/config/sys.config
@@ -16,6 +16,19 @@
                 {database, "test"}
             ]
         }}
+    ]},
+    {lager, [
+        {log_root, "./log"},
+        {handlers, [
+            {lager_console_backend,
+                [{level, info}, {formatter, lager_default_formatter},
+                    {formatter_config, [date, "/", time, "[", severity, "][", module, ":", function, ":", line, "]", "|", message, "\n"]}]},
+            {lager_file_backend,
+                [{file, "error.log"}, {level, error}, {formatter, lager_default_formatter},
+                    {formatter_config, [date, "/", time, "[", module, ":", function, ":", line, "]", "|", message, "\n"]}]},
+            {lager_file_backend,
+                [{file, "info.log"}, {level, info}, {formatter, lager_default_formatter},
+                    {formatter_config, [date, "/", time, "[", module, ":", function, ":", line, "]", "|", message, "\n"]}]}
+        ]}
     ]}
-
 ].
