--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
     sync,
     jsx,
     {ranch, "1.7.1"},
-    {log4erl, {git, "https://github.com/ahmednawras/log4erl", {branch, "master"}}},
+    {lager, {git, "https://github.com/erlang-lager/lager", {branch, "master"}}},
     {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}},
     {'mysql-otp-poolboy', {git, "https://github.com/mysql-otp/mysql-otp-poolboy", {branch, "master"}}}
 ]}.
