--- a/config/login.cfg
+++ b/config/login.cfg
@@ -1,3 +1,4 @@
 {tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, 15000}}.
 {server_event, {{game, test_event}, {test, test_event, []}, 5000}}.
 {server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
+{server_db, {user, [{type, file}, {interval, 1800}]}}.
