--- a/config/sys.config
+++ b/config/sys.config
@@ -15,6 +15,21 @@
                 {password, "123456"},
                 {database, "test"}
             ]
+        }},
+        {sqlPool2, {
+            [
+                {name, {local, mysql}},
+                {worker_module, mysql},
+                {size, 1},
+                {max_overflow, 10}
+            ],
+            [
+                {host, "127.0.0.1"},
+                {port, 3306},
+                {user, "root"},
+                {password, "123456"},
+                {database, "test"}
+            ]
         }}
     ]},
     {lager, [
