--- a/config/login.cfg
+++ b/config/login.cfg
@@ -1,6 +1,7 @@
-{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, 15000}}.
-{server_event, {{game, test_event}, {test, test_event, []}, 5000}}.
-{server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
+{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, {login_pb, 'LoginReq'}, 15000}}.
+{tcp_protocol, {1, [{echo, echo, []}], {log_lib, error, []}, {echo_pb, 'HeartBeatResp'}, 15000}}.
+%%{server_event, {{game, test_event}, {test, test_event, []}, 5000}}.
+%%{server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
 {server_db, {user, [
     {mod, server_db_file},
     {key, userid, integer},
