--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,6 @@
     jsx,
     {ranch, "1.7.1"},
     {lager, {git, "https://github.com/erlang-lager/lager", {branch, "master"}}},
-    {practice_lib, {git, "https://github.com/Arthorn10086/practice_lib", {branch, "master"}}},
     {'mysql-otp-poolboy', {git, "https://github.com/mysql-otp/mysql-otp-poolboy", {branch, "master"}}}
 ]}.
 
@@ -39,3 +38,30 @@
     {name, 'yhw@127.0.0.1'},
     {boot, start_sasl}
 ]}.
+%%{relx, [
+%%    {release, {myTest1, "0.1.0"},
+%%        [
+%%
+%%            sasl,
+%%%%            lager,
+%%            test_server
+%%        ]
+%%    },
+%%
+%%    {sys_config, "./config/sys.config"},
+%%    {vm_args, "./config/vm.args"},
+%%
+%%    {dev_mode, true},
+%%    {include_erts, false},
+%%
+%%    {extended_start_script, true}]
+%%}.
+%%
+%%{dist_node, [
+%%    {setcookie, 'abc'},
+%%    {name, 'test@127.0.0.1'}
+%%]}.
+%%
+%%{profiles, [{prod, [{relx, [{dev_mode, false},
+%%    {include_erts, true}]}]
+%%}]}.
