--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,10 @@
 ]}.
 
 {plugins, [
-    {rebar3_gpb_plugin, "2.12.0"}
+    {rebar3_gpb_plugin, "2.12.0"},
+    rebar3_auto,
+    rebar3_reloader
+
 ]}.
 {shell, [
     {config, "config/sys.config"},
