--- a/config/login.cfg
+++ b/config/login.cfg
@@ -5,5 +5,7 @@
 {server_db, {user, [
     {mod, server_db_file},
     {key, userid, integer},
-    {interval, 1800000}
+    {interval, 300},%秒
+    {cache_time, 1800000},%毫秒
+    {cache_size, 5}%KB
 ]}}.
