--- a/config/sys.config
+++ b/config/sys.config
@@ -1,9 +1,20 @@
 [
     {sasl, [{sasl_error_logger, {file, "./log/sasl.log"}}]},
+    {eredis_pool,
+        [
+            {global_or_local, local},
+            {pools, [{dbsrv, [
+                {size, 10},
+                {max_overflow, 30}
+            ], []}
+            ]}
+
+        ]
+    },
     {mysql_poolboy, [
         {sqlPool1, {
             [
-                {name, {local, mysql}},
+                {name, {local, mysql1}},
                 {worker_module, mysql},
                 {size, 10},
                 {max_overflow, 5}
@@ -18,7 +29,7 @@
         }},
         {sqlPool2, {
             [
-                {name, {local, mysql}},
+                {name, {local, mysql2}},
                 {worker_module, mysql},
                 {size, 10},
                 {max_overflow, 10}
