--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [
     debug_info,
+    {parse_transform, lager_transform},
     {i, "./_build/default/plugins/gpb/include"},
     {i, "./include"}
 ]}.
@@ -7,7 +8,9 @@
 {deps, [
     sync,
     jsx,
+    cowboy,
     {ranch, "1.7.1"},
+    {eredis_pool, {git, "https://github.com/yunba/eredis_pool", {branch, "master"}}},
     {lager, {git, "https://github.com/erlang-lager/lager", {branch, "master"}}},
     {'mysql-otp-poolboy', {git, "https://github.com/mysql-otp/mysql-otp-poolboy", {branch, "master"}}}
 ]}.
@@ -38,7 +41,7 @@
     ]}.
 {dist_node, [
     {setcookie, 'abc'},
-    {name, 'yhw@127.0.0.1'},
+    {name, 'test@127.0.0.1'},
     {boot, start_sasl}
 ]}.
 %%{relx, [
