--- a/config/login.cfg
+++ b/config/login.cfg
@@ -1,12 +1,24 @@
 {tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, {login_pb, 'LoginReq'}, 15000}}.
 {tcp_protocol, {1, [{echo, echo, []}], {log_lib, error, []}, {echo_pb, 'HeartBeatResp'}, 15000}}.
-{http_protocol, {"/add", [{test, add, []}], {log_lib, error, []}, {test_server_handler,format,[]}, 15000}}.
+{http_protocol, {"/add", [{test, add, []}], {log_lib, error, []}, {test_server_handler, format, []}, 15000}}.
 %%{server_event, { test_event, {test, test_event, []}, 5000}}.
 %%{server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
+
+
 {server_db, {user, [
-    {mod, server_db_file},
-    {key, id, integer},
+    {mod, file_table},
+    {key, user_id, integer},
     {interval, 300},%秒
     {cache_time, 1800000},%毫秒
-    {cache_size, 5}%KB
+    {cache_size, 5},%KB
+    {format, {{db_lib, format_out}, {db_lib, format_in}, [{user_id, integer}, {role, list}, {password, str}]}}
+]}}.
+
+{server_db, {role, [
+    {mod, file_table},
+    {key, role_uid, integer},
+    {interval, 300},%秒
+    {cache_time, 1800000},%毫秒
+    {cache_size, 5},%KB
+    {format, {{db_lib, format_out}, {db_lib, format_in}, []}}
 ]}}.
