--- a/config/sys.config
+++ b/config/sys.config
@@ -1,4 +1,5 @@
 [
+    {erl_gs_db,[{pool_name,sqlPool1},{db_cache_tactics, write_behind}]},
     {sasl, [{sasl_error_logger, {file, "./log/sasl.log"}}]},
     {eredis_pool,
         [
@@ -18,21 +19,6 @@
                 {worker_module, mysql},
                 {size, 10},
                 {max_overflow, 5}
-            ],
-            [
-                {host, "127.0.0.1"},
-                {port, 3306},
-                {user, "root"},
-                {password, "123456"},
-                {database, "test"}
-            ]
-        }},
-        {sqlPool2, {
-            [
-                {name, {local, mysql2}},
-                {worker_module, mysql},
-                {size, 10},
-                {max_overflow, 10}
             ],
             [
                 {host, "127.0.0.1"},
