--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
     {ranch, "1.7.1"},
     {eredis_pool, {git, "https://github.com/yunba/eredis_pool", {branch, "master"}}},
     {lager, {git, "https://github.com/erlang-lager/lager", {branch, "master"}}},
-    {'mysql-otp-poolboy', {git, "https://github.com/mysql-otp/mysql-otp-poolboy", {branch, "master"}}}
+    {erl_gs_db, {git, "https://github.com/Arthorn10086/erl_gs_db", {branch, "master"}}}
 ]}.
 
 {plugins, [
