--- a/config/login.cfg
+++ b/config/login.cfg
@@ -1,5 +1,5 @@
-{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, {login_pb, 'LoginReq'}, 15000}}.
-{tcp_protocol, {1, [{echo, echo, []}], {log_lib, error, []}, {echo_pb, 'HeartBeatResp'}, 15000}}.
+{tcp_protocol, {1001, [{login_port, login, []}], {log_lib, error, []}, {login_pb, 'LoginReq', 'loginResp'}, 15000}}.
+{tcp_protocol, {1, [{echo, echo, []}], {log_lib, error, []}, {echo_pb, 'HeartBeatReq', 'HeartBeatResp'}, 15000}}.
 {http_protocol, {"/add", [{test, add, []}], {log_lib, error, []}, {test_server_handler, format, []}, 15000}}.
 %%{server_event, { test_event, {test, test_event, []}, 5000}}.
 %%{server_timer, {test_timer, {test, test_timer, []}, {5000, 15000}}}.
