--- a/config/sys.config
+++ b/config/sys.config
@@ -1,12 +1,13 @@
 [
+    {test_server, [{http_port, 8088}, {cfg_path, "./config"}, {tcp_port, 7631}, {db_cache_tactics, write_behind}]},
     {erl_gs_db,[{pool_name,sqlPool1},{db_cache_tactics, write_behind}]},
     {sasl, [{sasl_error_logger, {file, "./log/sasl.log"}}]},
     {eredis_pool,
         [
             {global_or_local, local},
             {pools, [{dbsrv, [
-                {size, 10},
-                {max_overflow, 30}
+                {size, 1},
+                {max_overflow, 1}
             ], []}
             ]}
 
